===================================
gnome-commander 1.2.8.7
---------------

Bug fixes:
 * Fixed problem #540438 (no GUI message if meld cannot be executed)


===================================
gnome-commander 1.2.8.6
---------------

Bug fixes:
 * Fixed problem #602795 (file content search)
 * Fixed problem #609912 (build error with --as-needed)
 * Fixed problem #612685 (crashes when double-clicking on a bookmark)
 * Fixed problem #616891 (build error on RHEL 5.5)

New features:
 * New translations: ko


===================================
gnome-commander 1.2.8.5
---------------

Bug fixes:
 * Fixed problem #604558 (cursor lost/placed in wrong position)
 * Fixed problem #604904 (build error on OpenSolaris)
 * Fixed problem #609342 (do not show mtime for '..')
 * Fixed problem with editing connections to Windows network
 * Fixed problem with nonexistent user actions


===================================
gnome-commander 1.2.8.4
---------------

Bug fixes:
 * Fixed problem #602916 (not working menu entry)
 * Fixed problem #603301 (crash when cancelling symlink creation by ESC)
 * Fixed Ubuntu problem #369818 (incorrect sorting by size in panel)
 * Fixed problem with not working keypad enter in copy/move dialog
 * Fixed problem with stalled keyboard after ALT+1/2 with hidden device list


===================================
gnome-commander 1.2.8.3
---------------

Bug fixes:
 * Fixed problem #541891 (file names with % in advanced file rename tool)
 * Fixed problem #581645 (uncomfortable quick search)
 * Fixed problem #596768 (build warnings for python)
 * Fixed problem #596973 (documentation build error)
 * Fixed problem #597144 (missing call to pclose)
 * Fixed problem #597233 (validating of doc translations)
 * Fixed problem #597890 (wrong arguments passed to meld)
 * Fixed problem #598278 (memory leak)


===================================
gnome-commander 1.2.8.2
---------------

Bug fixes:
 * Fixed problem #591944 (permissions set to 000 after chmod)