@@ -6045,6 +6045,9 @@
                         <listitem>
                             <para>Fixed problem #540438 (no GUI message if meld cannot be executed)</para>
                         </listitem>
+                        <listitem>
+                            <para>Fixed problem #620650 (buffer overflow in load_fav_apps())</para>
+                        </listitem>
                     </itemizedlist>
                 </para>
             </entry>
